--- a/src/app/design/editor/ui-editor/screen-editor/screen-editor.component.html
+++ b/src/app/design/editor/ui-editor/screen-editor/screen-editor.component.html
@@ -701,6 +701,11 @@
                                       required>
                                     <label for="nav-pills" class="btn btn-outline-secondary border-2 me-1 mb-1">
                                     Pills</label>
+                                    <input class="btn-check" type="radio" value="underline" id="nav-underline"
+                                      name="nav-underline" [(ngModel)]="curScreen.data.nav"
+                                      required>
+                                    <label for="nav-underline" class="btn btn-outline-secondary border-2 me-1 mb-1">
+                                    Underline</label>
                                     <input class="btn-check" type="radio" value="accordions" id="nav-acc"
                                       name="nav-acc" [(ngModel)]="curScreen.data.nav" required>
                                     <label for="nav-acc" class="btn btn-outline-secondary border-2 me-1 mb-1">
