--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,7 +67,8 @@ body {
 //   border-top: none;
 // }
 .single-pane {
-  padding: 0.65rem;
+  // padding: 0.65rem;
+  padding: 0.75rem;
 }
 
 .clearfix{
@@ -789,6 +790,7 @@ ngb-pagination ul.pagination{
   /* border: none; */
   /* box-shadow:0 .125rem .25rem rgba(0,0,0,.075)!important; */
   /* box-shadow:0 1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24); */
+  border-radius:12px;
   border: none;
   // overflow: hidden; // problem for component with popup such as ng-select
   /* transition: all 0.2s cubic-bezier(.25,.8,.25,1); */
@@ -834,7 +836,9 @@ ngb-pagination ul.pagination{
   .card.card-clean {
     // box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     box-shadow: 0px 0.3px 0.9px rgba(0, 0, 0, 0.12), 0px 1.6px 3.6px rgba(0, 0, 0, 0.16);
-    border-radius: 0.45rem;
+    // box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.05), 0px 6px 24px 0px rgba(0, 0, 0, 0.05);
+    // border-radius: 0.45rem;
+    // border-radius: 12px;
   }
 
   .card-clean .card-header:first-child {
