--- a/src/app/design/editor/editor.component.html
+++ b/src/app/design/editor/editor.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-row bg-white position-relative shadow-sm" style="height:48px;z-index:1">
-  @if (loading){
+  @if (loading()){
     <div class="header-colors"></div>
   }
   <a class="bar-link text-dark" routerLink="/design" title="Back to Home Page" routerLinkActive="active">
