--- a/src/app/run/_component/field-edit-b/field-edit-b.component.scss
+++ b/src/app/run/_component/field-edit-b/field-edit-b.component.scss
@@ -31,9 +31,9 @@
     border-radius: var(--bs-border-radius) !important;
 }
 
-.btn:focus{
-    margin-top:0.5px;
-}
+// .btn:focus{
+//     margin-top:0.5px;
+// }
 
 .ng-select.ng-select-focused:not(.ng-select-opened) > .ng-select-container,
 .angular-editor .angular-editor-wrapper .angular-editor-textarea:focus,
