--- a/src/app/run/view/view.component.html
+++ b/src/app/run/view/view.component.html
@@ -1,3 +1,4 @@
+<!-- {{preurl}} -->
 <div id="view-{{form?.id}}" class="viewport section-to-print">
   @if (!hideTitle()){
     <page-title class="p-3" [asComp]="asComp()" (closed)="closed.emit(true)">
