--- a/src/app/run/screen/screen.component.html
+++ b/src/app/run/screen/screen.component.html
@@ -175,6 +175,10 @@
             <div id="screen-{{screen.id}}-content" [ngClass]="screen?.data?.parentclass"
               [innerHtml]="compileTpl(screen?.data?.content, {$_:entry,$:entry.data,$prev$:entry.prev,$$_:entry.approval,$maps$:mapList,$go:goObjWParam,$popup:popObj,$param$:$param$,$this$:$this$,$user$:user, $conf$:runService.appConfig,$base$:base,$baseUrl$:baseUrl,$baseApi$:baseApi})|safe:'html'">
             </div>
+            <!-- <div [ngClass]="screen?.data?.parentclass"
+              [patchMode]="'inner'"
+              [htmlPatch]="compileTpl(screen?.data?.content, {$_:entry,$:entry.data,$prev$:entry.prev,$$_:entry?.approval,$go:goObjWParam,$popup:popObj,$param$:$param$,$this$:$this$,$user$:user, $conf$:runService.appConfig,$base$:base,$baseUrl$:baseUrl,$baseApi$:baseApi})|safe:'html'">
+            </div> -->
           }@else if (screen.type=='mailbox') {
             @defer(prefetch on idle){
               <app-mailbox [email]="user.email" [appId]="app.id"></app-mailbox>
